{
    "name": "MainInput",
    "maps": [
        {
            "name": "ControllerButton",
            "id": "88f571c9-851d-4545-8a61-b5890451bcba",
            "actions": [
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "f7976116-7061-410d-8fac-df4504210c3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "86f8afca-868d-4cb0-968a-6bb76d72bc87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a212b0d6-2d0c-42e0-a7e2-041be1ac2e69",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53b4447e-b8d7-46c6-a580-a6931d1ae58c",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}